# scriba

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scriba/: __init__.py  audio.py  cli.py  config.py  dispatch.py  engine.py  errors.py  extract.py  model.py  ocr.py  pdf.py  reflow.py  resources.py
tests/: test_audio_engine.py  test_cli.py  test_pdf.py
