[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scriba"
dynamic = ["version"]
description = "Turn things into text. PDFs (text-layer + selective OCR) and audio (Moonshine transcription) to .txt, with batch and constrained-hardware defaults."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Justin Lietz" }]
keywords = ["pdf", "ocr", "tesseract", "transcription", "moonshine", "text-extraction"]
dependencies = [
    "pymupdf>=1.24",
]

[project.optional-dependencies]
audio = ["moonshine-voice>=0.0.59,<0.1.0"]
dev = ["pytest>=8"]

[project.scripts]
scriba = "scriba.cli:main"

[tool.setuptools.dynamic]
version = { attr = "scriba._version.__version__" }

[tool.setuptools.packages.find]
include = ["scriba*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
